--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,6 +40,18 @@
       <p class="pt-2 text-sm italic text-grey-dark">(we need your current password to confirm your changes)</p>
     </div>
 
+    <h3 class="mb-4 text-lg font-bold">Roles</h3>
+
+    <div class="input-group">
+      <%= f.label :developer, "Use railsdevs.com as a developer?" %>
+      <%= f.check_box :developer %>
+    </div>
+
+    <div class="input-group">
+      <%= f.label :employer, "Use railsdevs.com as a employer?" %>
+      <%= f.check_box :employer %>
+    </div>
+
     <div class="input-group">
       <%= f.submit "Update", class: "btn btn-default" %>
     </div>
