--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,6 +30,18 @@
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input" %>
     </div>
 
+    <h3 class="mb-4 text-lg font-bold">Roles</h3>
+
+    <div class="input-group">
+      <%= f.label :developer, "Use railsdevs.com as a developer?" %>
+      <%= f.check_box :developer %>
+    </div>
+
+    <div class="input-group">
+      <%= f.label :employer, "Use railsdevs.com as a employer?" %>
+      <%= f.check_box :employer %>
+    </div>
+
     <div class="input-group">
       <%= f.submit "Sign up", class: "btn btn-default" %>
     </div>
