--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -10,7 +10,7 @@
   <%= csp_meta_tag %>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <%= stylesheet_link_tag  "https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;800&display=swap", media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= stylesheet_link_tag  'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= stylesheet_pack_tag  'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
