--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,10 @@
 <header class="mb-4">
-  <nav class="flex flex-wrap items-center justify-between px-3 py-3 text-gray-700 bg-gray-100 lg:px-10">
+  <nav class="flex flex-wrap items-center justify-between px-3 py-3 text-gray-700 bg-white-100 lg:px-10">
     <div class="flex items-center mr-6 flex-no-shrink">
-      <%= link_to "Kickoff", root_path, class:"link text-xl tracking-tight font-semibold" %>
+      <%= link_to root_path, class:"link text-xl tracking-tight font-semibold" do %>
+        <%= render_svg "icons/ruby", title: "railsdevs.com", styles: "fill-current text-red-600 h-10 w-10" %>
+      <% end %> 
+
     </div>
     <div class="block lg:hidden">
       <button class="flex items-center px-3 py-2 border border-gray-500 rounded text-grey hover:text-gray-600 hover:border-gray-600">
