--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Job</h1>
-
-<%= render 'form', job: @job %>
-
-<%= link_to 'Back', jobs_path, class: "btn btn-red" %>
+<div data-controller="jobs">
+  <div data-target="jobs.mount"></div>
+</div>
